--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@angular/http": "4.4.3",
         "@angular/platform-browser": "4.4.3",
         "@angular/platform-browser-dynamic": "4.4.3",
+        "@ionic-native/call-number": "^4.5.2",
         "@ionic-native/camera": "^4.5.2",
         "@ionic-native/core": "4.3.2",
         "@ionic-native/http": "^4.5.2",
@@ -29,6 +30,7 @@
         "@ionic-native/splash-screen": "4.3.2",
         "@ionic-native/status-bar": "4.3.2",
         "@ionic/storage": "2.0.1",
+        "call-number": "^1.0.1",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-advanced-http": "^1.9.0",
         "cordova-plugin-camera": "^4.0.1",
@@ -45,7 +47,8 @@
         "ionicons": "3.0.0",
         "rxjs": "5.4.3",
         "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.18"
+        "zone.js": "0.8.18",
+        "mx.ferreyra.callnumber": "~0.0.2"
     },
     "devDependencies": {
         "@ionic/app-scripts": "3.0.1",
@@ -62,7 +65,8 @@
             "cordova-plugin-advanced-http": {},
             "cordova-plugin-x-socialsharing": {},
             "cordova-plugin-inappbrowser": {},
-            "cordova-plugin-camera": {}
+            "cordova-plugin-camera": {},
+            "mx.ferreyra.callnumber": {}
         },
         "platforms": [
             "ios"
