--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "@ionic-native/splash-screen": "4.3.2",
         "@ionic-native/status-bar": "4.3.2",
         "@ionic/storage": "2.0.1",
+        "amazon-cognito-identity-js": "^1.29.0",
+        "aws-sdk": "2.177.0",
         "cordova-ios": "^4.5.4",
         "cordova-plugin-advanced-http": "^1.9.0",
         "cordova-plugin-camera": "^4.0.1",
