--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "security-checks": "git-secrets --scan && git log -p | scanrepo",
     "generate-env": "node ./config/scripts/replace.env",
     "preionic:serve": "npm run-script generate-env --dev",
-    "ionic:serve": "ionic-app-scripts serve",
+    "ionic:serve": "ionic-app-scripts serve --nobrowser",
     "prebuild-ios": "npm run-script generate-env --dev",
     "build-ios": "ionic-app-scripts build --target cordova --platform ios --prod --aot --minifyjs -- minifycss --optimizejs",
     "test": "karma start ./test-config/karma.conf.js",
@@ -42,6 +42,7 @@
     "@ionic-native/social-sharing": "^4.15.0",
     "@ionic-native/splash-screen": "~4.12.0",
     "@ionic-native/status-bar": "~4.12.0",
+    "@ionic-native/wheel-selector": "^4.17.0",
     "@ionic/storage": "^2.2.0",
     "amazon-cognito-identity-js": "^1.29.0",
     "aws-sdk": "2.177.0",
@@ -58,6 +59,7 @@
     "cordova-plugin-whitelist": "^1.3.1",
     "cordova-plugin-x-socialsharing": "^5.4.1",
     "cordova-sqlite-storage": "^2.5.0",
+    "cordova-wheel-selector-plugin": "1.1.1",
     "es6-promise-plugin": "^4.1.0",
     "ionic-angular": "^3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
@@ -104,7 +106,8 @@
       "mx.ferreyra.callnumber": {},
       "cordova-sqlite-storage": {},
       "call-number": {},
-      "cordova-open-native-settings": {}
+      "cordova-open-native-settings": {},
+      "cordova-wheel-selector-plugin": {}
     },
     "platforms": [
       "ios"
