--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@ionic-native/core": "~4.12.0",
     "@ionic-native/http": "^4.15.0",
     "@ionic-native/in-app-browser": "^4.15.0",
+    "@ionic-native/mobile-accessibility": "^4.17.0",
     "@ionic-native/open-native-settings": "^4.16.0",
     "@ionic-native/social-sharing": "^4.15.0",
     "@ionic-native/splash-screen": "~4.12.0",
@@ -104,7 +105,8 @@
       "mx.ferreyra.callnumber": {},
       "cordova-sqlite-storage": {},
       "call-number": {},
-      "cordova-open-native-settings": {}
+      "cordova-open-native-settings": {},
+      "phonegap-plugin-mobile-accessibility": {}
     },
     "platforms": [
       "ios"
