--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@ionic-native/social-sharing": "^4.15.0",
     "@ionic-native/splash-screen": "~4.12.0",
     "@ionic-native/status-bar": "~4.12.0",
+    "@ionic-native/wheel-selector": "^4.17.0",
     "@ionic/storage": "^2.2.0",
     "amazon-cognito-identity-js": "^1.29.0",
     "aws-sdk": "2.177.0",
@@ -59,6 +60,7 @@
     "cordova-plugin-whitelist": "^1.3.1",
     "cordova-plugin-x-socialsharing": "^5.4.1",
     "cordova-sqlite-storage": "^2.5.0",
+    "cordova-wheel-selector-plugin": "1.1.1",
     "es6-promise-plugin": "^4.1.0",
     "ionic-angular": "^3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
@@ -106,7 +108,8 @@
       "cordova-sqlite-storage": {},
       "call-number": {},
       "cordova-open-native-settings": {},
-      "phonegap-plugin-mobile-accessibility": {}
+      "phonegap-plugin-mobile-accessibility": {},
+      "cordova-wheel-selector-plugin": {}
     },
     "platforms": [
       "ios"
