--- a/package.json
+++ b/package.json
@@ -71,15 +71,15 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.8",
-    "@ionic/app-scripts": "3.2.0",
+    "@angular/cli": "^7.1.0",
+    "@ionic/app-scripts": "^3.2.1",
     "@types/jasmine": "^2.5.41",
     "angular2-template-loader": "^0.6.2",
     "html-loader": "^0.5.1",
     "istanbul-instrumenter-loader": "^3.0.1",
     "jasmine": "^2.5.3",
     "jasmine-spec-reporter": "^4.1.0",
-    "karma": "^1.5.0",
+    "karma": "^3.1.3",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "^1.1.0",
