--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test-coverage": "karma start ./test-config/karma.conf.js --coverage",
     "e2e": "npm run e2e-update && npm run e2e-test",
     "e2e-test": "protractor ./test-config/protractor.conf.js",
-    "e2e-update": "webdriver-manager update --standalone false --gecko false"
+    "e2e-update": "webdriver-manager update --standalone false --gecko false",
+    "sonar-scanner": "echo 'TODO'"
   },
   "dependencies": {
     "@angular/animations": "^5.2.11",
