--- a/package.json
+++ b/package.json
@@ -48,23 +48,25 @@
     "aws-sdk": "2.177.0",
     "call-number": "^1.0.1",
     "cordova-ios": "4.5.5",
-    "cordova-open-native-settings": "^1.5.1",
-    "cordova-plugin-advanced-http": "^1.9.0",
+    "cordova-open-native-settings": "^1.5.2",
+    "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-camera": "^4.0.3",
-    "cordova-plugin-device": "^1.1.4",
-    "cordova-plugin-file": "^5.0.0",
-    "cordova-plugin-inappbrowser": "^2.0.1",
+    "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-inappbrowser": "^2.0.2",
     "cordova-plugin-ionic-webview": "^2.3.1",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-whitelist": "^1.3.1",
-    "cordova-plugin-x-socialsharing": "^5.4.1",
-    "cordova-sqlite-storage": "^2.5.0",
-    "cordova-wheel-selector-plugin": "1.1.1",
-    "es6-promise-plugin": "^4.1.0",
+    "cordova-plugin-network-information": "git+https://github.com/apache/cordova-plugin-network-information.git",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-x-socialsharing": "^5.4.3",
+    "cordova-sqlite-storage": "^2.6.0",
+    "cordova-wheel-selector-plugin": "^1.1.1",
+    "es6-promise-plugin": "^4.2.2",
     "ionic-angular": "^3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "mx.ferreyra.callnumber": "0.0.2",
+    "phonegap-plugin-mobile-accessibility": "^1.0.5",
     "rxjs": "^5.5.12",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
@@ -74,6 +76,7 @@
     "@ionic/app-scripts": "^3.2.1",
     "@types/jasmine": "^2.5.41",
     "angular2-template-loader": "^0.6.2",
+    "cpx": "^1.5.0",
     "html-loader": "^0.5.1",
     "istanbul-instrumenter-loader": "^3.0.1",
     "jasmine": "^2.5.3",
