--- a/config/application.json
+++ b/config/application.json
@@ -8,9 +8,10 @@
   "AUTH_PASSWORD": "",
   "AUTH_HEADERS": "",
   "AUTH_TOKEN": "",
+  "BACKEND_GET_CERTIFICATE": "",
   "BACKEND_URL_ATF": "",
   "BACKEND_URL_DEFECTS": "",
   "BACKEND_URL_PREPARERS": "",
   "BACKEND_URL_TESTTYPES": "",
-  "BACKEND_GET_CERTIFICATE": ""
+  "BACKEND_URL_TECHRECORDS": ""
 }
