--- a/config/application.json
+++ b/config/application.json
@@ -13,5 +13,7 @@
   "BACKEND_URL_DEFECTS": "",
   "BACKEND_URL_PREPARERS": "",
   "BACKEND_URL_TESTTYPES": "",
-  "BACKEND_URL_TECHRECORDS": ""
+  "BACKEND_URL_TECHRECORDS": "",
+  "BACKEND_URL_GET_TEST_RESULTS": ""
 }
+
