--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@ionic-native/core": "~4.12.0",
     "@ionic-native/http": "^4.15.0",
     "@ionic-native/in-app-browser": "^4.15.0",
+    "@ionic-native/keyboard": "^4.20.0",
     "@ionic-native/mobile-accessibility": "^4.17.0",
     "@ionic-native/open-native-settings": "^4.16.0",
     "@ionic-native/social-sharing": "^4.15.0",
@@ -64,7 +65,6 @@
     "cordova-wheel-selector-plugin": "^1.1.1",
     "es6-promise-plugin": "^4.2.2",
     "ionic-angular": "^3.9.2",
-    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "mx.ferreyra.callnumber": "0.0.2",
     "phonegap-plugin-mobile-accessibility": "^1.0.5",
@@ -114,7 +114,8 @@
       "cordova-open-native-settings": {},
       "phonegap-plugin-mobile-accessibility": {},
       "cordova-wheel-selector-plugin": {},
-      "cordova-plugin-statusbar": {}
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
       "ios"
