--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@ionic-native/in-app-browser": "^4.15.0",
     "@ionic-native/keyboard": "^4.20.0",
     "@ionic-native/mobile-accessibility": "^4.17.0",
+    "@ionic-native/ms-adal": "^4.20.0",
     "@ionic-native/open-native-settings": "^4.16.0",
     "@ionic-native/social-sharing": "^4.15.0",
     "@ionic-native/splash-screen": "~4.12.0",
@@ -49,11 +50,13 @@
     "cordova-open-native-settings": "^1.5.2",
     "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-camera": "^4.0.3",
+    "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-inappbrowser": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.3.1",
+    "cordova-plugin-ms-adal": "^0.10.1",
     "cordova-plugin-network-information": "git+https://github.com/apache/cordova-plugin-network-information.git",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-statusbar": "2.4.2",
@@ -65,6 +68,7 @@
     "ionic-angular": "^3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "jwt-decode": "^2.2.0",
     "mx.ferreyra.callnumber": "0.0.2",
     "phonegap-plugin-mobile-accessibility": "^1.0.5",
     "rxjs": "^5.5.12",
@@ -113,7 +117,8 @@
       "phonegap-plugin-mobile-accessibility": {},
       "cordova-wheel-selector-plugin": {},
       "cordova-plugin-statusbar": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-ms-adal": {}
     },
     "platforms": [
       "ios"
