--- a/package.json
+++ b/package.json
@@ -35,28 +35,30 @@
     "@ionic-native/call-number": "^4.15.0",
     "@ionic-native/camera": "^4.15.0",
     "@ionic-native/core": "~4.12.0",
+    "@ionic-native/deeplinks": "^4.20.0",
     "@ionic-native/http": "^4.15.0",
     "@ionic-native/in-app-browser": "^4.15.0",
     "@ionic-native/keyboard": "^4.20.0",
     "@ionic-native/mobile-accessibility": "^4.17.0",
+    "@ionic-native/ms-adal": "^4.20.0",
     "@ionic-native/open-native-settings": "^4.16.0",
     "@ionic-native/social-sharing": "^4.15.0",
     "@ionic-native/splash-screen": "~4.12.0",
     "@ionic-native/status-bar": "^4.12.2",
     "@ionic-native/wheel-selector": "^4.17.0",
     "@ionic/storage": "^2.2.0",
-    "amazon-cognito-identity-js": "^1.29.0",
-    "aws-sdk": "2.177.0",
     "call-number": "^1.0.1",
     "cordova-ios": "4.5.5",
     "cordova-open-native-settings": "^1.5.2",
     "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-camera": "^4.0.3",
+    "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-inappbrowser": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.3.1",
+    "cordova-plugin-ms-adal": "^0.10.1",
     "cordova-plugin-network-information": "git+https://github.com/apache/cordova-plugin-network-information.git",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-statusbar": "2.4.2",
@@ -66,8 +68,10 @@
     "cordova-wheel-selector-plugin": "^1.1.1",
     "es6-promise-plugin": "^4.2.2",
     "ionic-angular": "^3.9.2",
+    "ionic-plugin-deeplinks": "^1.0.17",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "jwt-decode": "^2.2.0",
     "mx.ferreyra.callnumber": "0.0.2",
     "phonegap-plugin-mobile-accessibility": "^1.0.5",
     "rxjs": "^5.5.12",
@@ -117,7 +121,13 @@
       "phonegap-plugin-mobile-accessibility": {},
       "cordova-wheel-selector-plugin": {},
       "cordova-plugin-statusbar": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-ms-adal": {},
+      "ionic-plugin-deeplinks": {
+        "URL_SCHEME": "cvs",
+        "DEEPLINK_SCHEME": "https",
+        "DEEPLINK_HOST": "8HTSCWWX39.com.deloittedigital.TonkaAlphaTest"
+      }
     },
     "platforms": [
       "ios"
