--- a/config/application.json
+++ b/config/application.json
@@ -1,19 +1,15 @@
 {
   "IS_PRODUCTION": "",
-  "KEY_GOOGLE_MAPS_KEY": "",
   "KEY_PHONE_NUMBER": "",
-  "AUTH_REGION": "",
-  "AUTH_USER_POOL_ID": "",
-  "AUTH_CLIENT_ID": "",
-  "AUTH_USERNAME": "",
-  "AUTH_PASSWORD": "",
-  "AUTH_HEADERS": "",
-  "AUTH_TOKEN": "",
-  "BACKEND_GET_CERTIFICATE": "",
+  "MSAL_CLIENT_ID": "",
+  "MSAL_AUTHORITY": "",
+  "MSAL_HOST": "",
+  "MSAL_REDIRECT_URL": "",
+  "MSAL_RESOURCE_URL": "",
   "BACKEND_URL_TEST_STATIONS": "",
   "BACKEND_URL_DEFECTS": "",
   "BACKEND_URL_PREPARERS": "",
   "BACKEND_URL_TESTTYPES": "",
   "BACKEND_URL_TECHRECORDS": "",
-  "BACKEND_URL_GET_TEST_RESULTS": ""
+  "BACKEND_URL_TEST_RESULTS": ""
 }
