--- a/config/application.json
+++ b/config/application.json
@@ -6,5 +6,6 @@
   "BACKEND_URL_PREPARERS": "http://localhost:3003/preparers",
   "BACKEND_URL_TESTTYPES": "http://localhost:3002/test-types",
   "BACKEND_URL_TECHRECORDS": "http://localhost:3005/vehicles",
-  "BACKEND_URL_TEST_RESULTS": "http://localhost:3006/test-results"
+  "BACKEND_URL_TEST_RESULTS": "http://localhost:3006/test-results",
+  "BACKEND_URL_VISIT": "http://localhost:3007/activities"
 }
