--- a/config/application.json
+++ b/config/application.json
@@ -10,7 +10,7 @@
   "AUTH_HEADERS": "",
   "AUTH_TOKEN": "",
   "BACKEND_GET_CERTIFICATE": "",
-  "BACKEND_URL_ATF": "",
+  "BACKEND_URL_TEST_STATIONS": "",
   "BACKEND_URL_DEFECTS": "",
   "BACKEND_URL_PREPARERS": "",
   "BACKEND_URL_TESTTYPES": "",
