--- a/config/application.json
+++ b/config/application.json
@@ -6,6 +6,7 @@
   "MSAL_HOST": "",
   "MSAL_REDIRECT_URL": "",
   "MSAL_RESOURCE_URL": "",
+  "BACKEND_URL_SIGNATURE": "",
   "BACKEND_URL_TEST_STATIONS": "http://localhost:3004/test-stations",
   "BACKEND_URL_DEFECTS": "http://localhost:3001/defects",
   "BACKEND_URL_PREPARERS": "http://localhost:3003/preparers",
