--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
     "@ionic-native/mobile-accessibility": "^4.17.0",
     "@ionic-native/ms-adal": "^4.20.0",
     "@ionic-native/open-native-settings": "^4.16.0",
+    "@ionic-native/screen-orientation": "^4.20.0",
     "@ionic-native/social-sharing": "^4.15.0",
     "@ionic-native/splash-screen": "~4.12.0",
     "@ionic-native/status-bar": "^4.12.2",
     "@ionic-native/wheel-selector": "^4.17.0",
     "@ionic/storage": "^2.2.0",
+    "angular2-signaturepad": "^2.8.0",
     "call-number": "^1.0.1",
     "cordova-ios": "4.5.5",
     "cordova-open-native-settings": "^1.5.2",
@@ -59,6 +61,7 @@
     "cordova-plugin-ionic-webview": "^2.3.1",
     "cordova-plugin-ms-adal": "^0.10.1",
     "cordova-plugin-network-information": "git+https://github.com/apache/cordova-plugin-network-information.git",
+    "cordova-plugin-screen-orientation": "3.0.1",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-statusbar": "2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -117,6 +120,7 @@
       "cordova-wheel-selector-plugin": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-screen-orientation": {},
       "cordova-plugin-ms-adal": {}
     },
     "platforms": [
