--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "test-ci-headless": "karma start ./test-config/karma.conf.js",
     "test-watch": "karma start ./test-config/karma.conf.js --watch",
     "test-coverage": "karma start ./test-config/karma.conf.js --coverage",
+    "scan-code": "npm run test-coverage && sonar-scanner",
     "e2e": "npm run e2e-update && npm run e2e-test",
     "e2e-test": "protractor ./test-config/protractor.conf.js",
-    "e2e-update": "webdriver-manager update --standalone false --gecko false",
-    "sonar-scanner": "echo 'TODO'"
+    "e2e-update": "webdriver-manager update --standalone false --gecko false"
   },
   "dependencies": {
     "@angular/animations": "^5.2.11",
