--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@ionic/storage": "^2.2.0",
     "angular2-signaturepad": "^2.8.0",
     "call-number": "^1.0.1",
-    "cordova-ios": "4.5.5",
+    "cordova-ios": "^4.5.5",
     "cordova-open-native-settings": "^1.5.2",
     "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-camera": "^4.0.3",
