--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "ionic-app-scripts lint",
     "security-checks": "git-secrets --scan && git log -p | scanrepo",
     "ionic:serve": "ionic-app-scripts serve --nobrowser",
-    "build": "ionic-app-scripts build --target cordova --platform ios",
+    "build": "ionic-app-scripts build --prod --target cordova --platform ios",
     "emulate-ios": "ionic cordova emulate ios --target=iPhone-8-Plus -- --buildFlag=-UseModernBuildSystem=0",
     "test-ci-headless": "karma start ./test-config/karma.conf.js",
     "test-watch": "karma start ./test-config/karma.conf.js --watch",
@@ -24,7 +24,7 @@
     "@angular/animations": "^5.2.11",
     "@angular/common": "^5.2.11",
     "@angular/compiler": "^5.2.11",
-    "@angular/compiler-cli": "^7.2.7",
+    "@angular/compiler-cli": "^5.2.11",
     "@angular/core": "^5.2.11",
     "@angular/forms": "^5.2.11",
     "@angular/http": "^5.2.11",
