--- a/config/application.json
+++ b/config/application.json
@@ -1,6 +1,6 @@
 {
   "IS_PRODUCTION": "false",
-  "KEY_PHONE_NUMBER": "00000",
+  "KEY_PHONE_NUMBER": "03001232325",
   "MSAL_CLIENT_ID": "",
   "MSAL_AUTHORITY": "",
   "MSAL_HOST": "",
