--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 #----- Default SonarQube server
-sonar.host.url=http://volted-monkey-sonarqube.ops:9000
+sonar.host.url=http://localhost:9000
 
 # must be unique in a given SonarQube instance
 sonar.projectKey=org.sonarqube:cvs-app-mobile
@@ -11,7 +11,8 @@ sonar.projectVersion=1.0
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set.
 sonar.sources=src
-sonar.tests=src
+sonar.exclusions=src/assets, src/models, src/service-worker.js, src/app/main.ts, src/providers/utils/rxjs.utils.ts, src/providers/global/state-reforming.service.ts, src/pipes/search/search.pipe.ts
+sonar.tests=src/app
 sonar.test.inclusions=**/*.spec.ts
 sonar.ts.tslintconfigpath=tslint.json
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
