--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@types/jasmine": "^2.5.41",
     "angular2-template-loader": "^0.6.2",
     "html-loader": "^0.5.1",
+    "ionic-mocks": "^1.3.0",
     "istanbul-instrumenter-loader": "^3.0.1",
     "jasmine": "^2.5.3",
     "jasmine-spec-reporter": "^4.1.0",
