--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ionic-native/call-number": "^4.15.0",
     "@ionic-native/camera": "^4.15.0",
     "@ionic-native/core": "~4.12.0",
+    "@ionic-native/firebase": "^4.20.0",
     "@ionic-native/http": "^4.15.0",
     "@ionic-native/in-app-browser": "^4.15.0",
     "@ionic-native/keyboard": "^4.20.0",
@@ -50,25 +51,26 @@
     "@types/uuidv4": "^2.0.0",
     "angular2-signaturepad": "^2.8.0",
     "call-number": "^1.0.1",
-    "cordova-ios": "^4.5.5",
+    "cordova-ios": "4.5.5",
     "cordova-open-native-settings": "^1.5.2",
     "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-firebase": "2.0.5",
     "cordova-plugin-inappbrowser": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.3.1",
-    "cordova-plugin-ms-adal": "^0.10.1",
+    "cordova-plugin-ionic-webview": "^2.4.1",
+    "cordova-plugin-ms-adal": "^0.10.2",
     "cordova-plugin-network-information": "git+https://github.com/apache/cordova-plugin-network-information.git",
-    "cordova-plugin-screen-orientation": "3.0.1",
+    "cordova-plugin-screen-orientation": "^3.0.1",
     "cordova-plugin-splashscreen": "^4.1.0",
-    "cordova-plugin-statusbar": "2.4.2",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-plugin-x-socialsharing": "^5.4.3",
+    "cordova-plugin-x-socialsharing": "^5.4.4",
     "cordova-sqlite-storage": "^2.6.0",
-    "cordova-wheel-selector-plugin": "^1.1.1",
+    "cordova-wheel-selector-plugin": "^1.1.2",
     "es6-promise-plugin": "^4.2.2",
     "ionic-angular": "^3.9.2",
     "ionicons": "3.0.0",
@@ -124,7 +126,8 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-screen-orientation": {},
-      "cordova-plugin-ms-adal": {}
+      "cordova-plugin-ms-adal": {},
+      "cordova-plugin-firebase": {}
     },
     "platforms": [
       "ios"
