--- a/config/application.json
+++ b/config/application.json
@@ -14,5 +14,6 @@
   "BACKEND_URL_TESTTYPES": "http://localhost:3002/test-types",
   "BACKEND_URL_TECHRECORDS": "http://localhost:3005/vehicles",
   "BACKEND_URL_TEST_RESULTS": "http://localhost:3006/test-results",
-  "BACKEND_URL_VISIT": "http://localhost:3007/activities"
+  "BACKEND_URL_VISIT": "http://localhost:3007/activities",
+  "BACKEND_URL_LOGS": "http://localhost:3000/logs"
 }
