--- a/package.json
+++ b/package.json
@@ -41,13 +41,17 @@
     "@ionic-native/keyboard": "^4.20.0",
     "@ionic-native/mobile-accessibility": "^4.17.0",
     "@ionic-native/ms-adal": "^4.20.0",
+    "@ionic-native/network": "^4.20.0",
     "@ionic-native/open-native-settings": "^4.16.0",
     "@ionic-native/screen-orientation": "^4.20.0",
+    "@ionic-native/secure-storage": "^4.20.0",
     "@ionic-native/social-sharing": "^4.15.0",
     "@ionic-native/splash-screen": "~4.12.0",
     "@ionic-native/status-bar": "^4.12.2",
     "@ionic-native/wheel-selector": "^4.17.0",
     "@ionic/storage": "^2.2.0",
+    "@ngrx/effects": "^5.2.0",
+    "@ngrx/store": "^5.2.0",
     "@types/uuidv4": "^2.0.0",
     "angular2-signaturepad": "^2.8.0",
     "call-number": "^1.0.1",
@@ -65,6 +69,7 @@
     "cordova-plugin-ms-adal": "^0.10.2",
     "cordova-plugin-network-information": "git+https://github.com/apache/cordova-plugin-network-information.git",
     "cordova-plugin-screen-orientation": "^3.0.1",
+    "cordova-plugin-secure-storage": "^3.0.2",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -127,7 +132,9 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-screen-orientation": {},
       "cordova-plugin-ms-adal": {},
-      "cordova-plugin-firebase": {}
+      "cordova-plugin-firebase": {},
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-secure-storage": {}
     },
     "platforms": [
       "ios"
