--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.projectVersion=1.0
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set.
 sonar.sources=src
-sonar.exclusions=src/modules/logs/*.mock.ts, src/directives/**, src/pages/testing/test-submitted/**, src/assets, src/models, src/service-worker.js, src/app/main.ts, src/providers/utils/rxjs.utils.ts, src/providers/global/state-reforming.service.ts, src/pipes/search/search.pipe.ts
+sonar.exclusions=src/modules/logs/*.mock.ts, src/directives/**, src/pages/testing/test-submitted/**, src/assets/**, src/models, src/service-worker.js, src/app/main.ts, src/providers/utils/rxjs.utils.ts, src/providers/global/state-reforming.service.ts, src/pipes/search/search.pipe.ts
 sonar.tests=src/app
 sonar.test.inclusions=**/*.spec.ts
 sonar.ts.tslintconfigpath=tslint.json
