--- a/config/application.json
+++ b/config/application.json
@@ -7,6 +7,7 @@
   "MSAL_HOST": "",
   "MSAL_REDIRECT_URL": "",
   "MSAL_RESOURCE_URL": "",
+  "UNAUTH_LOGS_API_KEY": "",
   "BACKEND_URL_SIGNATURE": "",
   "BACKEND_URL_TEST_STATIONS": "http://localhost:3004/test-stations",
   "BACKEND_URL_DEFECTS": "http://localhost:3001/defects",
@@ -15,5 +16,6 @@
   "BACKEND_URL_TECHRECORDS": "http://localhost:3005/vehicles",
   "BACKEND_URL_TEST_RESULTS": "http://localhost:3006/test-results",
   "BACKEND_URL_VISIT": "http://localhost:3007/activities",
-  "BACKEND_URL_LOGS": "http://localhost:3000/logs"
+  "BACKEND_URL_LOGS": "http://localhost:3000/logs",
+  "BACKEND_URL_UNAUTH_LOGS": "http://localhost:3000/unauth-logs"
 }
