--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/platform-browser-dynamic": "^5.2.11",
     "@angular/platform-server": "^5.2.11",
     "@angular/router": "^5.2.11",
+    "@ionic-native/app-version": "^4.20.0",
     "@ionic-native/call-number": "^4.15.0",
     "@ionic-native/camera": "^4.15.0",
     "@ionic-native/core": "~4.12.0",
@@ -135,7 +136,9 @@
       "cordova-plugin-ms-adal": {},
       "cordova-plugin-firebase": {},
       "cordova-plugin-network-information": {},
-      "cordova-plugin-secure-storage": {}
+      "cordova-plugin-secure-storage": {},
+      "cordova-plugin-app-version": {},
+      "cordova-plugin-exit": {}
     },
     "platforms": [
       "ios"
