--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "cordova-plugin-x-socialsharing": "^5.4.4",
     "cordova-sqlite-storage": "^2.6.0",
     "cordova-wheel-selector-plugin": "^1.1.2",
+    "cordova-plugin-exit": "^1.0.3",
     "es6-promise-plugin": "^4.2.2",
     "ionic-angular": "^3.9.2",
     "ionicons": "3.0.0",
