--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "@types/jasmine": "^2.5.41",
     "angular2-template-loader": "^0.6.2",
     "html-loader": "^0.5.1",
+    "husky": "^3.0.9",
     "ionic-mocks": "^1.3.0",
     "istanbul-instrumenter-loader": "^3.0.1",
     "jasmine": "^2.5.3",
@@ -140,5 +141,10 @@
     "platforms": [
       "ios"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run security-checks"
+    }
   }
 }
