fix(install): update deps and installation
fix(install): update meta in package.json

fix(install): remove duplicated dependency

fix(install): add package-lock.json

--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
   "private": true,
+  "engines": {
+    "node": "10.18.1"
+  },
   "scripts": {
     "clean": "ionic-app-scripts clean",
     "build-default": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
     "security-checks": "git-secrets --scan && git log -p | scanrepo",
     "ionic:serve": "ionic-app-scripts serve --nobrowser",
-    "build": "ionic-app-scripts build --prod --target cordova --platform ios",
+    "build:prod": "ionic-app-scripts build --prod --target cordova --platform ios",
+    "build": "ionic-app-scripts build --target cordova --platform ios",
     "emulate-ios": "ionic cordova emulate ios --target=iPhone-8-Plus -- --buildFlag=-UseModernBuildSystem=0",
     "test-ci-headless": "karma start ./test-config/karma.conf.js",
     "test-watch": "karma start ./test-config/karma.conf.js --watch",
@@ -78,9 +82,8 @@
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
-    "cordova-plugin-x-socialsharing": "^5.6.2",
+    "cordova-plugin-x-socialsharing": "^5.6.8",
     "cordova-sqlite-storage": "^2.6.0",
-    "cordova-wheel-selector-plugin": "^1.1.2",
     "es6-promise-plugin": "^4.2.2",
     "ionic-angular": "^3.9.2",
     "ionicons": "3.0.0",
@@ -93,12 +96,15 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^9.0.6",
+    "@angular/cli": "^6.2.9",
     "@ionic/app-scripts": "^3.2.4",
     "@types/jasmine": "^2.5.41",
     "angular2-template-loader": "^0.6.2",
+    "cordova": "^8.1.2",
+    "cordova-wheel-selector-plugin": "^1.1.1",
     "html-loader": "^0.5.1",
     "husky": "^3.0.9",
+    "ionic": "^5.2.3",
     "ionic-mocks": "^1.3.0",
     "istanbul-instrumenter-loader": "^3.0.1",
     "jasmine": "^2.5.3",
