--- a/.editorconfig
+++ b/.editorconfig
@@ -1,17 +1,20 @@
 # EditorConfig helps developers define and maintain consistent coding styles between different editors and IDEs
-# editorconfig.org
-
+# https://EditorConfig.org
 root = true
 
 [*]
+charset = utf-8
 indent_style = space
 indent_size = 2
-
-# We recommend you to keep these unchanged
 end_of_line = lf
-charset = utf-8
-trim_trailing_whitespace = true
 insert_final_newline = true
+trim_trailing_whitespace = true
+quote_type = single
 
 [*.md]
+max_line_length = off
 trim_trailing_whitespace = false
+
+[*.{js,ts,json,yml}]
+indent_style = space
+indent_size = 2
