--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "npm": "6.13.4"
   },
   "scripts": {
+    "start": "source .env && node_modules/.bin/ionic cordova emulate ios -lc --emulator --target=${IPHONE8_P_ID}",
     "clean": "ionic-app-scripts clean",
     "build-default": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
@@ -127,7 +128,8 @@
     "protractor": "^5.4.2",
     "ts-loader": "^3.0.3",
     "ts-node": "^8.7.0",
-    "typescript": "^2.9.2"
+    "typescript": "^2.9.2",
+    "native-run": "^0.2.9"
   },
   "description": "An Ionic project",
   "cordova": {
