--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "e2e": "npm run e2e-update && npm run e2e-test",
     "e2e-test": "protractor ./test-config/protractor.conf.js",
     "e2e-update": "webdriver-manager update --standalone false --gecko false",
-    "audit-dep": "npm audit --json | audit-filter --nsp-config=.nsprc --audit=-"
+    "audit-dep": "npm audit --audit-level=high --json | audit-filter --nsp-config=.nsprc --audit=-"
   },
   "dependencies": {
     "@angular/animations": "^5.2.11",
