--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "start": "source .env && node_modules/.bin/ionic cordova emulate ios -lc --emulator --target=${IPHONE8_P_ID}",
     "clean": "ionic-app-scripts clean",
     "build-default": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint",
+    "lint": "node_modules/.bin/tslint -p ./",
+    "eslint": "eslint --ext .ts ./src",
+    "lint:fix": "node_modules/.bin/tslint --fix -p ./",
     "format": "node_modules/.bin/prettier --write ./src/**/*.{html,scss,ts,json}",
     "security-checks": "git-secrets --scan && git log -p | scanrepo",
     "ionic:serve": "ionic-app-scripts serve --nobrowser",
@@ -102,10 +104,17 @@
     "@angular/cli": "^6.2.9",
     "@commitlint/cli": "^9.1.1",
     "@commitlint/config-conventional": "^9.1.1",
+    "@dvsa/eslint-config-ts": "^1.0.0",
     "@ionic/app-scripts": "^3.2.4",
     "@types/jasmine": "^2.5.41",
+    "@typescript-eslint/eslint-plugin": "^2.24.0",
+    "@typescript-eslint/parser": "^2.24.0",
     "angular2-template-loader": "^0.6.2",
     "cordova-wheel-selector-plugin": "^1.1.1",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-typescript": "^5.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-security": "^1.4.0",
     "html-loader": "^0.5.1",
     "husky": "^3.0.9",
     "ionic": "^5.2.3",
@@ -123,11 +132,15 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.3",
     "lodash": "^4.17.19",
+    "npm-run-all": "^4.1.3",
     "null-loader": "^0.1.1",
     "prettier": "^1.19.1",
     "protractor": "^5.4.2",
+    "rxjs-tslint-rules": "^4.29.1",
     "ts-loader": "^3.0.3",
     "ts-node": "^8.7.0",
+    "tslint": "^6.0.0",
+    "tslint-config-airbnb": "^5.11.1",
     "typescript": "^2.9.2",
     "native-run": "^0.2.9"
   },
