--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@angular/platform-browser-dynamic": "^5.2.11",
     "@angular/platform-server": "^5.2.11",
     "@angular/router": "^5.2.11",
+    "@ionic-enterprise/auth": "^3.1.3",
     "@ionic-native/app-version": "^4.20.0",
     "@ionic-native/call-number": "^4.15.0",
     "@ionic-native/camera": "^4.15.0",
@@ -159,7 +160,10 @@
       "cordova-plugin-network-information": {},
       "cordova-plugin-secure-storage": {},
       "cordova-plugin-app-version": {},
-      "cordova-plugin-exit": {}
+      "cordova-plugin-exit": {},
+      "@ionic-enterprise/auth": {
+        "AUTH_URL_SCHEME": "vtaapplication"
+      }
     },
     "platforms": [
       "ios"
