--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test-watch": "karma start ./test-config/karma.conf.js --watch",
     "test-coverage": "karma start ./test-config/karma.conf.js --coverage",
     "sonar-scanner": "npm run test-coverage && sonar-scanner",
+    "check-feature": "./scripts/check-feature.sh",
     "e2e": "npm run e2e-update && npm run e2e-test",
     "e2e-test": "protractor ./test-config/protractor.conf.js",
     "e2e-update": "webdriver-manager update --standalone false --gecko false",
@@ -167,6 +168,7 @@
   },
   "husky": {
     "hooks": {
+      "prepare-commit-msg": "npm run check-feature",
       "commit-msg": "npm run lint && npm run format && ./node_modules/.bin/commitlint -E HUSKY_GIT_PARAMS",
       "pre-commit": "npm run security-checks",
       "pre-push": "npm run build && npm run test-coverage"
