chore(feature/cvsb-17412): refactor config hybrid, web, a few unit tests need fixing

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@ Gemfile.lock
 $RECYCLE.BIN/
 coverage/
 config/application.json
+config/application.web.ts
+config/application.hybrid.ts
 
 .DS_Store
 Thumbs.db
@@ -40,3 +42,4 @@ UserInterfaceState.xcuserstate
 GoogleService-Info.plist
 *.env
 TESTS-PhantomJS_2.1.1_(Mac_OS_X_0.0.0).xml
+
