--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "@ionic/app-scripts": "^3.2.4",
     "@types/jasmine": "^2.5.41",
     "angular2-template-loader": "^0.6.2",
+    "chalk": "^4.1.0",
     "cordova-wheel-selector-plugin": "^1.1.1",
     "dotenv": "^8.2.0",
     "html-loader": "^0.5.1",
