--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "test-watch": "karma start ./test-config/karma.conf.js --watch",
     "test-coverage": "karma start ./test-config/karma.conf.js --coverage",
     "sonar-scanner": "npm run test-coverage && sonar-scanner",
+    "sentry-wizard": "node_modules/.bin/sentry-wizard",
     "e2e": "npm run e2e-update && npm run e2e-test",
     "e2e-test": "protractor ./test-config/protractor.conf.js",
     "e2e-update": "webdriver-manager update --standalone false --gecko false",
     "audit-dep": "npm audit --audit-level=high --json | audit-filter --nsp-config=.nsprc --audit=-"
+  },
+  "config": {
+    "ionic_generate_source_map": "true"
   },
   "dependencies": {
     "@angular/animations": "^5.2.11",
@@ -61,6 +65,7 @@
     "@ionic/storage": "^2.2.0",
     "@ngrx/effects": "^5.2.0",
     "@ngrx/store": "^5.2.0",
+    "@sentry/wizard": "^1.1.4",
     "@types/uuidv4": "^2.0.0",
     "angular2-signaturepad": "^2.8.0",
     "audit-filter": "^0.5.0",
@@ -94,6 +99,7 @@
     "mx.ferreyra.callnumber": "0.0.2",
     "phonegap-plugin-mobile-accessibility": "^1.0.5",
     "rxjs": "^5.5.12",
+    "sentry-cordova": "^0.17.0",
     "sw-toolbox": "3.6.0",
     "uuid": "^3.3.2",
     "zone.js": "0.8.26"
@@ -159,7 +165,8 @@
       "cordova-plugin-network-information": {},
       "cordova-plugin-secure-storage": {},
       "cordova-plugin-app-version": {},
-      "cordova-plugin-exit": {}
+      "cordova-plugin-exit": {},
+      "sentry-cordova": {}
     },
     "platforms": [
       "ios"
