fix(cvsb-18231): Integrate sentry with the app

--- a/.gitignore
+++ b/.gitignore
@@ -32,10 +32,9 @@ www/
 Gemfile.lock
 $RECYCLE.BIN/
 coverage/
-config/application.json
 
 .DS_Store
 Thumbs.db
 UserInterfaceState.xcuserstate
-GoogleService-Info.plist
 *.env
+sentry.properties
