--- a/package.json
+++ b/package.json
@@ -14,19 +14,24 @@
     "build-default": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
     "format": "node_modules/.bin/prettier --write ./src/**/*.{html,scss,ts,json}",
+    "config": "ts-node ./scripts/create-configs.ts",
     "security-checks": "git-secrets --scan && git log -p | scanrepo",
     "ionic:serve": "ionic-app-scripts serve --nobrowser",
-    "build:prod": "ionic-app-scripts build --prod --target cordova --platform ios",
-    "build": "ionic-app-scripts build --target cordova --platform ios",
+    "build:prod": "npm run config && ionic-app-scripts build --prod --target cordova --platform ios",
+    "build": "npm run config && ionic-app-scripts build --target cordova --platform ios",
     "emulate-ios": "ionic cordova emulate ios --target=iPhone-8-Plus -- --buildFlag=-UseModernBuildSystem=0",
     "test-ci-headless": "karma start ./test-config/karma.conf.js",
     "test-watch": "karma start ./test-config/karma.conf.js --watch",
     "test-coverage": "karma start ./test-config/karma.conf.js --coverage",
     "sonar-scanner": "npm run test-coverage && sonar-scanner",
+    "sentry-wizard": "node_modules/.bin/sentry-wizard",
     "e2e": "npm run e2e-update && npm run e2e-test",
     "e2e-test": "protractor ./test-config/protractor.conf.js",
     "e2e-update": "webdriver-manager update --standalone false --gecko false",
     "audit-dep": "npm audit --audit-level=high --json | audit-filter --nsp-config=.nsprc --audit=-"
+  },
+  "config": {
+    "ionic_generate_source_map": "true"
   },
   "dependencies": {
     "@angular/animations": "^5.2.11",
@@ -88,12 +93,14 @@
     "cordova-plugin-x-socialsharing": "^5.6.8",
     "cordova-sqlite-storage": "^2.6.0",
     "es6-promise-plugin": "^4.2.2",
+    "fs-extra": "^9.0.1",
     "ionic-angular": "^3.9.2",
     "ionicons": "3.0.0",
     "jwt-decode": "^2.2.0",
     "mx.ferreyra.callnumber": "0.0.2",
     "phonegap-plugin-mobile-accessibility": "^1.0.5",
     "rxjs": "^5.5.12",
+    "sentry-cordova": "^0.17.0",
     "sw-toolbox": "3.6.0",
     "uuid": "^3.3.2",
     "zone.js": "0.8.26"
@@ -103,6 +110,8 @@
     "@commitlint/cli": "^9.1.1",
     "@commitlint/config-conventional": "^9.1.1",
     "@ionic/app-scripts": "^3.2.4",
+    "@sentry/wizard": "^1.1.4",
+    "@types/debug": "^4.1.5",
     "@types/jasmine": "^2.5.41",
     "angular2-template-loader": "^0.6.2",
     "cordova-wheel-selector-plugin": "^1.1.1",
@@ -123,13 +132,13 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.3",
     "lodash": "^4.17.19",
+    "native-run": "^0.2.9",
     "null-loader": "^0.1.1",
     "prettier": "^1.19.1",
     "protractor": "^5.4.2",
     "ts-loader": "^3.0.3",
-    "ts-node": "^8.7.0",
-    "typescript": "^2.9.2",
-    "native-run": "^0.2.9"
+    "ts-node": "^8.10.2",
+    "typescript": "^2.9.2"
   },
   "description": "An Ionic project",
   "cordova": {
@@ -159,7 +168,8 @@
       "cordova-plugin-network-information": {},
       "cordova-plugin-secure-storage": {},
       "cordova-plugin-app-version": {},
-      "cordova-plugin-exit": {}
+      "cordova-plugin-exit": {},
+      "sentry-cordova": {}
     },
     "platforms": [
       "ios"
