fix(feature/cvsb-18854): authconnect and identity vault implementation
ci(audit): upgrade npm dependencies

chore(sonar): add instructions for sonar locally & configure with brew

chore(env): create scripts to dynamically create config files based on env

fix(env): update app imports with newly generated files

chore(config): fix comments, import, terminal lines

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build-default": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
     "format": "node_modules/.bin/prettier --write ./src/**/*.{html,scss,ts,json}",
-    "config": "ts-node ./scripts/create-configs.ts",
+    "config": "ts-node ./scripts/create-configs.ts --environment=local",
     "security-checks": "git-secrets --scan && git log -p | scanrepo",
     "ionic:serve": "ionic-app-scripts serve --nobrowser",
     "build:prod": "npm run config && ionic-app-scripts build --prod --target cordova --platform ios",
@@ -34,44 +34,46 @@
     "ionic_generate_source_map": "true"
   },
   "dependencies": {
-    "@angular/animations": "^5.2.11",
-    "@angular/common": "^5.2.11",
-    "@angular/compiler": "^5.2.11",
-    "@angular/compiler-cli": "^9.0.6",
-    "@angular/core": "^5.2.11",
-    "@angular/forms": "^5.2.11",
-    "@angular/http": "^5.2.11",
-    "@angular/platform-browser": "^5.2.11",
-    "@angular/platform-browser-dynamic": "^5.2.11",
-    "@angular/platform-server": "^5.2.11",
-    "@angular/router": "^5.2.11",
+    "@angular/animations": "5.2.11",
+    "@angular/common": "5.2.11",
+    "@angular/compiler": "5.2.11",
+    "@angular/compiler-cli": "5.2.11",
+    "@angular/core": "5.2.11",
+    "@angular/forms": "5.2.11",
+    "@angular/platform-browser": "5.2.11",
+    "@angular/platform-browser-dynamic": "5.2.11",
+    "@angular/platform-server": "5.2.11",
+    "@angular/router": "5.2.11",
+    "@ionic-enterprise/auth": "^3.3.1",
+    "@ionic-enterprise/identity-vault": "^4.2.7",
     "@ionic-native/app-version": "^4.20.0",
     "@ionic-native/call-number": "^4.15.0",
     "@ionic-native/camera": "^4.15.0",
-    "@ionic-native/core": "~4.12.0",
+    "@ionic-native/core": "4.20.0",
     "@ionic-native/firebase": "^4.20.0",
     "@ionic-native/http": "^4.15.0",
     "@ionic-native/in-app-browser": "^4.15.0",
     "@ionic-native/keyboard": "^4.20.0",
     "@ionic-native/mobile-accessibility": "^4.17.0",
-    "@ionic-native/ms-adal": "^4.20.0",
     "@ionic-native/network": "^4.20.0",
     "@ionic-native/open-native-settings": "^4.16.0",
     "@ionic-native/screen-orientation": "^4.20.0",
     "@ionic-native/secure-storage": "^4.20.0",
     "@ionic-native/social-sharing": "^4.15.0",
-    "@ionic-native/splash-screen": "~4.12.0",
-    "@ionic-native/status-bar": "^4.12.2",
+    "@ionic-native/splash-screen": "4.20.0",
+    "@ionic-native/status-bar": "4.20.0",
     "@ionic-native/wheel-selector": "^4.17.0",
-    "@ionic/storage": "^2.2.0",
+    "@ionic/storage": "~2.2.0",
     "@ngrx/effects": "^5.2.0",
     "@ngrx/store": "^5.2.0",
     "@types/uuidv4": "^2.0.0",
     "angular2-signaturepad": "^2.8.0",
     "audit-filter": "^0.5.0",
+    "await-to-js": "^2.1.1",
     "call-number": "^1.0.1",
     "cordova-ios": "^5.0.1",
     "cordova-open-native-settings": "^1.5.2",
+    "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-camera": "^4.1.0",
@@ -83,7 +85,6 @@
     "cordova-plugin-inappbrowser": "^3.2.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^2.5.3",
-    "cordova-plugin-ms-adal": "^0.10.2",
     "cordova-plugin-network-information": "git+https://github.com/apache/cordova-plugin-network-information.git",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-plugin-secure-storage": "^3.0.2",
@@ -92,9 +93,10 @@
     "cordova-plugin-whitelist": "^1.3.4",
     "cordova-plugin-x-socialsharing": "^5.6.8",
     "cordova-sqlite-storage": "^2.6.0",
+    "core-js": "^2.5.7",
     "es6-promise-plugin": "^4.2.2",
     "fs-extra": "^9.0.1",
-    "ionic-angular": "^3.9.2",
+    "ionic-angular": "3.9.9",
     "ionicons": "3.0.0",
     "jwt-decode": "^2.2.0",
     "mx.ferreyra.callnumber": "0.0.2",
@@ -103,27 +105,30 @@
     "sentry-cordova": "^0.17.0",
     "sw-toolbox": "3.6.0",
     "uuid": "^3.3.2",
-    "zone.js": "0.8.26"
+    "zone.js": "0.8.29"
   },
   "devDependencies": {
     "@angular/cli": "^6.2.9",
-    "@commitlint/cli": "^9.1.1",
-    "@commitlint/config-conventional": "^9.1.1",
-    "@ionic/app-scripts": "^3.2.4",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
+    "@ionic-enterprise/cordova": "^9.0.3",
+    "@ionic/app-scripts": "3.2.4",
+    "@ionic/cli": "^6.12.2",
+    "@ionic/lab": "3.2.10",
     "@sentry/wizard": "^1.1.4",
     "@types/debug": "^4.1.5",
     "@types/jasmine": "^2.5.41",
+    "@types/node": "14.6.2",
     "angular2-template-loader": "^0.6.2",
-    "cordova": "^8.1.2",
     "cordova-wheel-selector-plugin": "^1.1.1",
+    "dotenv": "^8.2.0",
     "html-loader": "^0.5.1",
     "husky": "^3.0.9",
-    "ionic": "^5.2.3",
     "ionic-mocks": "^1.3.0",
     "istanbul-instrumenter-loader": "^3.0.1",
-    "jasmine": "^2.5.3",
+    "jasmine": "^2.7.0",
     "jasmine-spec-reporter": "^4.1.0",
-    "karma": "^4.4.1",
+    "karma": "^5.2.3",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "^1.1.0",
@@ -136,10 +141,11 @@
     "native-run": "^0.2.9",
     "null-loader": "^0.1.1",
     "prettier": "^1.19.1",
-    "protractor": "^5.4.2",
+    "protractor": "^7.0.0",
     "ts-loader": "^3.0.3",
     "ts-node": "^8.10.2",
-    "typescript": "^2.9.2"
+    "typescript": "4.0.5",
+    "yargs": "^16.1.1"
   },
   "description": "An Ionic project",
   "cordova": {
@@ -164,13 +170,18 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-screen-orientation": {},
-      "cordova-plugin-ms-adal": {},
       "cordova-plugin-firebase": {},
       "cordova-plugin-network-information": {},
       "cordova-plugin-secure-storage": {},
       "cordova-plugin-app-version": {},
       "cordova-plugin-exit": {},
-      "sentry-cordova": {}
+      "@ionic-enterprise/auth": {
+        "AUTH_URL_SCHEME": "https://uk.gov.dvsa.cvsmobile"
+      },
+      "@ionic-enterprise/identity-vault": {},
+      "sentry-cordova": {
+        "SENTRY_ANDROID_SDK_VERSION": "1+"
+      }
     },
     "platforms": [
       "ios"
