--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build-default": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
     "format": "node_modules/.bin/prettier --write ./src/**/*.{html,scss,ts,json}",
-    "config": "ts-node ./scripts/create-configs.ts",
+    "config": "ts-node ./scripts/create-configs.ts --environment=local",
     "security-checks": "git-secrets --scan && git log -p | scanrepo",
     "ionic:serve": "ionic-app-scripts serve --nobrowser",
     "build:prod": "npm run config && ionic-app-scripts build --prod --target cordova --platform ios",
@@ -107,8 +107,8 @@
   },
   "devDependencies": {
     "@angular/cli": "^6.2.9",
-    "@commitlint/cli": "^9.1.1",
-    "@commitlint/config-conventional": "^9.1.1",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@ionic/app-scripts": "^3.2.4",
     "@sentry/wizard": "^1.1.4",
     "@types/debug": "^4.1.5",
@@ -116,6 +116,7 @@
     "angular2-template-loader": "^0.6.2",
     "cordova": "^8.1.2",
     "cordova-wheel-selector-plugin": "^1.1.1",
+    "dotenv": "^8.2.0",
     "html-loader": "^0.5.1",
     "husky": "^3.0.9",
     "ionic": "^5.2.3",
@@ -123,7 +124,7 @@
     "istanbul-instrumenter-loader": "^3.0.1",
     "jasmine": "^2.5.3",
     "jasmine-spec-reporter": "^4.1.0",
-    "karma": "^4.4.1",
+    "karma": "^5.2.3",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "^1.1.0",
@@ -136,10 +137,11 @@
     "native-run": "^0.2.9",
     "null-loader": "^0.1.1",
     "prettier": "^1.19.1",
-    "protractor": "^5.4.2",
+    "protractor": "^7.0.0",
     "ts-loader": "^3.0.3",
     "ts-node": "^8.10.2",
-    "typescript": "^2.9.2"
+    "typescript": "^2.9.2",
+    "yargs": "^16.1.1"
   },
   "description": "An Ionic project",
   "cordova": {
@@ -170,7 +172,9 @@
       "cordova-plugin-secure-storage": {},
       "cordova-plugin-app-version": {},
       "cordova-plugin-exit": {},
-      "sentry-cordova": {}
+      "sentry-cordova": {
+        "SENTRY_ANDROID_SDK_VERSION": "1+"
+      }
     },
     "platforms": [
       "ios"
