fix(feature/cvsb18854): update deps for native build
feat(cvsb-18854): update deps web app builds, AUTH+TESTS FAIL!

feat(cvsb-18854): make native build sand update deps, TESTS FAIL

--- a/package.json
+++ b/package.json
@@ -9,26 +9,27 @@
     "npm": "6.13.4"
   },
   "scripts": {
+    "config": "ts-node ./scripts/create-configs.ts --environment=local",
+    "prepare:ios": "ionic cordova platform add ios@6.0.0",
+    "audit:check": "npm audit --audit-level=high --json | audit-filter --nsp-config=.nsprc --audit=-",
+    "audit-dep": "npm audit",
     "start": "source .env && npm run config && ionic cordova emulate ios -lc --emulator --target=${IPHONE8_P_ID}",
     "clean": "ionic-app-scripts clean",
-    "build-default": "ionic-app-scripts build",
+    "format": "prettier --write ./src/**/*.{html,scss,ts,json}",
     "lint": "ionic-app-scripts lint",
-    "format": "node_modules/.bin/prettier --write ./src/**/*.{html,scss,ts,json}",
-    "config": "ts-node ./scripts/create-configs.ts --environment=local",
     "security-checks": "git-secrets --scan && git log -p | scanrepo",
-    "ionic:serve": "ionic-app-scripts serve --nobrowser",
-    "build:prod": "npm run config && ionic-app-scripts build --prod --target cordova --platform ios",
-    "build": "npm run config && ionic-app-scripts build --target cordova --platform ios",
-    "emulate-ios": "ionic cordova emulate ios --target=iPhone-8-Plus -- --buildFlag=-UseModernBuildSystem=0",
-    "test-ci-headless": "karma start ./test-config/karma.conf.js",
-    "test-watch": "karma start ./test-config/karma.conf.js --watch",
-    "test-coverage": "karma start ./test-config/karma.conf.js --coverage",
-    "sonar-scanner": "npm run test-coverage && sonar-scanner",
-    "sentry-wizard": "node_modules/.bin/sentry-wizard",
-    "e2e": "npm run e2e-update && npm run e2e-test",
-    "e2e-test": "protractor ./test-config/protractor.conf.js",
-    "e2e-update": "webdriver-manager update --standalone false --gecko false",
-    "audit-dep": "npm audit --audit-level=high --json | audit-filter --nsp-config=.nsprc --audit=-"
+    "build:web": "ionic-app-scripts build --target cordova --platform ios",
+    "build:ios": "ionic cordova build ios --target=iPhone-8-Plus",
+    "emulate:ios": "ionic cordova emulate ios -lc --emulator --target=${IPHONE8_P_ID}",
+    "emulate:browser": "ionic-app-scripts serve --nobrowser",
+    "test:unit": "karma start ./test-config/karma.conf.js",
+    "test:unit:coverage": "karma start ./test-config/karma.conf.js --coverage",
+    "test:unit:watch": "karma start ./test-config/karma.conf.js --watch",
+    "sonar-scanner": "npm run test:coverage && sonar-scanner",
+    "test:e2e": "npm run test:e2e:update && npm run test:e2e:run",
+    "test:e2e:run": "protractor ./test-config/protractor.conf.js",
+    "test:e2e:update": "webdriver-manager update --standalone false --gecko false",
+    "sentry-wizard": "node_modules/.bin/sentry-wizard"
   },
   "config": {
     "ionic_generate_source_map": "true"
@@ -45,16 +46,16 @@
     "@angular/platform-browser-dynamic": "^5.2.11",
     "@angular/platform-server": "^5.2.11",
     "@angular/router": "^5.2.11",
+    "@ionic-enterprise/auth": "3.1.4",
+    "@ionic-enterprise/identity-vault": "^4.2.7",
     "@ionic-native/app-version": "^4.20.0",
     "@ionic-native/call-number": "^4.15.0",
     "@ionic-native/camera": "^4.15.0",
     "@ionic-native/core": "~4.12.0",
-    "@ionic-native/firebase": "^4.20.0",
     "@ionic-native/http": "^4.15.0",
     "@ionic-native/in-app-browser": "^4.15.0",
     "@ionic-native/keyboard": "^4.20.0",
     "@ionic-native/mobile-accessibility": "^4.17.0",
-    "@ionic-native/ms-adal": "^4.20.0",
     "@ionic-native/network": "^4.20.0",
     "@ionic-native/open-native-settings": "^4.16.0",
     "@ionic-native/screen-orientation": "^4.20.0",
@@ -69,9 +70,11 @@
     "@types/uuidv4": "^2.0.0",
     "angular2-signaturepad": "^2.8.0",
     "audit-filter": "^0.5.0",
+    "auth": "0.0.9",
     "call-number": "^1.0.1",
-    "cordova-ios": "^5.0.1",
+    "cordova-ios": "^6.0.0",
     "cordova-open-native-settings": "^1.5.2",
+    "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-camera": "^4.1.0",
@@ -79,11 +82,9 @@
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-exit": "^1.0.3",
     "cordova-plugin-file": "^6.0.2",
-    "cordova-plugin-firebase": "^2.0.5",
-    "cordova-plugin-inappbrowser": "^3.2.0",
+    "cordova-plugin-inappbrowser": "git+https://github.com/apache/cordova-plugin-inappbrowser.git",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-ionic-webview": "^2.5.3",
-    "cordova-plugin-ms-adal": "^0.10.2",
+    "cordova-plugin-ionic-webview": "^5.0.0",
     "cordova-plugin-network-information": "git+https://github.com/apache/cordova-plugin-network-information.git",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-plugin-secure-storage": "^3.0.2",
@@ -91,7 +92,7 @@
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
     "cordova-plugin-x-socialsharing": "^5.6.8",
-    "cordova-sqlite-storage": "^2.6.0",
+    "cordova-sqlite-storage": "5.1.0",
     "es6-promise-plugin": "^4.2.2",
     "fs-extra": "^9.0.1",
     "ionic-angular": "^3.9.2",
@@ -103,23 +104,24 @@
     "sentry-cordova": "^0.17.0",
     "sw-toolbox": "3.6.0",
     "uuid": "^3.3.2",
-    "zone.js": "0.8.26"
+    "zone.js": "0.8.29"
   },
   "devDependencies": {
     "@angular/cli": "^6.2.9",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "@ionic/app-scripts": "^3.2.4",
+    "@ionic-enterprise/cordova": "^9.0.3",
+    "@ionic/app-scripts": "3.2.4",
+    "@ionic/cli": "^6.12.2",
     "@sentry/wizard": "^1.1.4",
     "@types/debug": "^4.1.5",
     "@types/jasmine": "^2.5.41",
+    "@types/node": "14.6.2",
     "angular2-template-loader": "^0.6.2",
-    "cordova": "^8.1.2",
     "cordova-wheel-selector-plugin": "^1.1.1",
     "dotenv": "^8.2.0",
     "html-loader": "^0.5.1",
     "husky": "^3.0.9",
-    "ionic": "^5.2.3",
     "ionic-mocks": "^1.3.0",
     "istanbul-instrumenter-loader": "^3.0.1",
     "jasmine": "^2.5.3",
@@ -147,7 +149,6 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-device": {},
-      "cordova-plugin-ionic-webview": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-advanced-http": {},
@@ -155,7 +156,6 @@
         "PHOTO_LIBRARY_ADD_USAGE_DESCRIPTION": "This app requires photo library access to function properly.",
         "PHOTO_LIBRARY_USAGE_DESCRIPTION": "This app requires photo library access to function properly."
       },
-      "cordova-plugin-inappbrowser": {},
       "cordova-plugin-camera": {},
       "mx.ferreyra.callnumber": {},
       "cordova-sqlite-storage": {},
@@ -166,15 +166,19 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-screen-orientation": {},
-      "cordova-plugin-ms-adal": {},
-      "cordova-plugin-firebase": {},
       "cordova-plugin-network-information": {},
       "cordova-plugin-secure-storage": {},
       "cordova-plugin-app-version": {},
       "cordova-plugin-exit": {},
+      "@ionic-enterprise/auth": {
+        "AUTH_URL_SCHEME": "https://uk.gov.dvsa.cvsmobile"
+      },
+      "@ionic-enterprise/identity-vault": {},
       "sentry-cordova": {
         "SENTRY_ANDROID_SDK_VERSION": "1+"
-      }
+      },
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-ionic-webview": {}
     },
     "platforms": [
       "ios"
