chore(build): fix mobile build
fix(deps): remove unnecessary cordova plugins

--- a/package.json
+++ b/package.json
@@ -11,24 +11,26 @@
   "scripts": {
     "start": "source .env && npm run config && ionic cordova emulate ios -lc --emulator --target=${IPHONE8_P_ID}",
     "clean": "ionic-app-scripts clean",
-    "build-default": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
-    "format": "node_modules/.bin/prettier --write ./src/**/*.{html,scss,ts,json}",
+    "prepare:ios": "ionic cordova platform add ios@6.0.0",
+    "format": "prettier --write ./src/**/*.{html,scss,ts,json}",
     "config": "ts-node ./scripts/create-configs.ts --environment=local",
     "security-checks": "git-secrets --scan && git log -p | scanrepo",
-    "ionic:serve": "ionic-app-scripts serve --nobrowser",
-    "build:prod": "npm run config && ionic-app-scripts build --prod --target cordova --platform ios",
-    "build": "npm run config && ionic-app-scripts build --target cordova --platform ios",
-    "emulate-ios": "ionic cordova emulate ios --target=iPhone-8-Plus -- --buildFlag=-UseModernBuildSystem=0",
-    "test-ci-headless": "karma start ./test-config/karma.conf.js",
-    "test-watch": "karma start ./test-config/karma.conf.js --watch",
-    "test-coverage": "karma start ./test-config/karma.conf.js --coverage",
-    "sonar-scanner": "npm run test-coverage && sonar-scanner",
+    "emulate:web": "ionic-app-scripts serve --nobrowser",
+    "emulate:ios": "ionic cordova emulate ios -lc --emulator --target=${IPHONE8_P_ID}",
+    "build:web": "ionic-app-scripts build",
+    "build:ios": "ionic cordova build ios --target=iPhone-8-Plus",
+    "build": "npm run config && npm run build:ios node",
+    "emulate-ios": "ionic cordova emulate ios --target={IPHONE8_P_ID}",
+    "test:unit:watch": "karma start ./test-config/karma.conf.js --watch",
+    "test:unit:coverage": "karma start ./test-config/karma.conf.js --coverage",
+    "sonar-scanner": "npm run test:unit:coverage && sonar-scanner",
     "sentry-wizard": "node_modules/.bin/sentry-wizard",
-    "e2e": "npm run e2e-update && npm run e2e-test",
-    "e2e-test": "protractor ./test-config/protractor.conf.js",
-    "e2e-update": "webdriver-manager update --standalone false --gecko false",
-    "audit-dep": "npm audit --audit-level=high --json | audit-filter --nsp-config=.nsprc --audit=-"
+    "test:e2e": "npm run test:e2e:configure && npm run test:e2e:run",
+    "test:e2e:run:": "protractor ./test-config/protractor.conf.js",
+    "test:e2e:configure": "webdriver-manager update --standalone false --gecko false",
+    "audit:check": "echo 'to remove' && npm audit --audit-level=high --json | audit-filter --nsp-config=.nsprc --audit=-",
+    "audit-dep": "npm audit"
   },
   "config": {
     "ionic_generate_source_map": "true"
@@ -51,12 +53,10 @@
     "@ionic-native/call-number": "^4.15.0",
     "@ionic-native/camera": "^4.15.0",
     "@ionic-native/core": "~4.12.0",
-    "@ionic-native/firebase": "^4.20.0",
     "@ionic-native/http": "^4.15.0",
     "@ionic-native/in-app-browser": "^4.15.0",
     "@ionic-native/keyboard": "^4.20.0",
     "@ionic-native/mobile-accessibility": "^4.17.0",
-    "@ionic-native/ms-adal": "^4.20.0",
     "@ionic-native/network": "^4.20.0",
     "@ionic-native/open-native-settings": "^4.16.0",
     "@ionic-native/screen-orientation": "^4.20.0",
@@ -71,10 +71,9 @@
     "@types/uuidv4": "^2.0.0",
     "angular2-signaturepad": "^2.8.0",
     "audit-filter": "^0.5.0",
-    "auth": "0.0.9",
     "await-to-js": "^2.1.1",
     "call-number": "^1.0.1",
-    "cordova-ios": "^5.0.1",
+    "cordova-ios": "^6.0.0",
     "cordova-open-native-settings": "^1.5.2",
     "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-advanced-http": "^1.11.1",
@@ -84,11 +83,10 @@
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-exit": "^1.0.3",
     "cordova-plugin-file": "^6.0.2",
-    "cordova-plugin-firebase": "^2.0.5",
-    "cordova-plugin-inappbrowser": "^3.2.0",
+    "cordova-plugin-firebasex": "8.0.1",
+    "cordova-plugin-inappbrowser": "git+https://github.com/apache/cordova-plugin-inappbrowser.git",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-ionic-webview": "^2.5.3",
-    "cordova-plugin-ms-adal": "^0.10.2",
+    "cordova-plugin-ionic-webview": "5.0.0",
     "cordova-plugin-network-information": "git+https://github.com/apache/cordova-plugin-network-information.git",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-plugin-secure-storage": "^3.0.2",
@@ -96,7 +94,7 @@
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
     "cordova-plugin-x-socialsharing": "^5.6.8",
-    "cordova-sqlite-storage": "^2.6.0",
+    "cordova-sqlite-storage": "5.1.0",
     "es6-promise-plugin": "^4.2.2",
     "fs-extra": "^9.0.1",
     "ionic-angular": "^3.9.2",
@@ -153,7 +151,6 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-device": {},
-      "cordova-plugin-ionic-webview": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-advanced-http": {},
@@ -172,8 +169,6 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-screen-orientation": {},
-      "cordova-plugin-ms-adal": {},
-      "cordova-plugin-firebase": {},
       "cordova-plugin-network-information": {},
       "cordova-plugin-secure-storage": {},
       "cordova-plugin-app-version": {},
@@ -184,7 +179,8 @@
       "@ionic-enterprise/identity-vault": {},
       "sentry-cordova": {
         "SENTRY_ANDROID_SDK_VERSION": "1+"
-      }
+      },
+      "cordova-plugin-ionic-webview": {}
     },
     "platforms": [
       "ios"
